fixed overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,11 @@
   padding: 0;
 }
 .overflowHidden {
-  overflow-y: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
